--- a/config.config
+++ b/config.config
@@ -3,11 +3,17 @@
 # Number of targets
 target_num = 9
 
-# Target sizes in pixels
-target_size = 50
+# Starting Target sizes in pixels
+starting_target_size = 50
 
-# Distance between targets in pixels
-target_distance = 200
+# Ending Target sizes in pixels
+ending_target_size = 10
+
+# Starting Distance between targets in pixels
+starting_target_distance = 100
+
+# Starting Distance between targets in pixels
+ending_target_distance = 300
 
 # Number of trials
-num_trials = 2
+num_trials = 5
