change starting/ending to min/max and add latency

--- a/config.config
+++ b/config.config
@@ -4,16 +4,16 @@
 target_num = 9
 
 # Starting Target sizes in pixels
-starting_target_size = 50
+max_target_size = 50
 
 # Ending Target sizes in pixels
-ending_target_size = 10
+min_target_size = 10
 
 # Starting Distance between targets in pixels
-starting_target_distance = 100
+min_target_distance = 150
 
 # Starting Distance between targets in pixels
-ending_target_distance = 300
+max_target_distance = 300
 
 # Number of trials
 num_trials = 5
